k8s/argocd/gateway-api-openclaw/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: shared-infra
    app.kubernetes.io/component: gateway
    app.kubernetes.io/platform: openclaw
spec:
  gatewayClassName: nginx
  listeners:
    - name: http-yt-summarizer-canary
      port: 80
      protocol: HTTP
      hostname: "api-openclaw.ashleyhollis.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-yt-summarizer-prod
      port: 80
      protocol: HTTP
      hostname: "api-ytsummarizer.ashleyhollis.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-meal-planner-prod
      port: 80
      protocol: HTTP
      hostname: "meal-planner.ashleyhollis.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-yt-summarizer-preview
      port: 80
      protocol: HTTP
      hostname: "*.ashleyhollis.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-yt-summarizer
      port: 80
      protocol: HTTP
      hostname: "*.yt-summarizer.apps.ashleyhollis.com"
      allowedRoutes:
        namespaces:
          from: All
